# ftmo-academy

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: academy-proofread.md  academy-write.md  academy.md
data/output/: ftmo_academy_workflow_EN.md  quiz_types-of-trading-charts.xlsx
data/output/archive/: lesson_types-of-trading-charts_EN.html  lesson_types-of-trading-charts_EN.md  lesson_types-of-trading-charts_EN_log.html  lesson_types-of-trading-charts_EN_log.md
data/output/guides/: ftmo_academy_content_inventory.md  ftmo_academy_product_context.md  ftmo_academy_structure_guide_EN.md  ftmo_academy_tov_2_EN.md  ftmo_academy_tov_guide_EN.md  ftmo_academy_workflow_EN.md  ftmo_academy_write_workflow_EN.md  ftmo_brand_analysis.md  personas_v2_validated.md  tov_analysis_personas.md
data/output/keywords/: forex-trading-hours-and-sessions_keywords.xlsx  japanese-candlesticks_keywords.xlsx  types-of-trading-charts_keywords.xlsx
data/output/lessons/basic-price-action/: basic-price-action_step1.xlsx  (+3 more)
data/raw/lessons/: all_lessons.md  archive_types_of_trading_charts_OLD.md  types-of-trading-charts.md
prompts/: step1_keywords.md  step2_tov.md  step3_structure.md  step4_html.md  write_step1_research.md  write_step2_brief.md  write_step3_draft.md  write_step4_tov_check.md
src/: __init__.py  config.py  create_keyword_xlsx.py  export_outline_docx.py  generate_log.py  generate_text.py  model_tester.py  quiz_generator.py  read_outline_docx.py  step4_html.py
src/adapters/: __init__.py  base.py  claude_api.py  gemini_api.py  openai_api.py
(+188 files in other folders)
